# python_template

./: .clineignore  .editorconfig  .env.secrets.enc  .gitignore  .pre-commit-config.yaml  example.env.secrets  justfile  merge_env.py  pyproject.toml  ruff.toml  setup.sh
.clinerules/: 01-python-guideline.md
.clinerules/workflows/: fix_checks.md
src/python_template/: main.py
