[project]
name = "python_template"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Vadym Stupakov", email = "vadim.stupakov@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "langchain-mcp-adapters>=0.1.12",
    "pydantic-ai-slim[google,mcp]>=1.7.0",
    "pydantic-settings>=2.11.0",
    "ta-lib>=0.6.8",
    "uvicorn>=0.38.0",
    "langgraph>=0.1.19",
    "langchain>=0.2.28",
    "langchain-openai>=0.1.22",
    "langchain-google-genai>=3.0.3",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "logfire[fastapi]>=4.16.0",
    "pydantic>=2.12.3",
]

[project.scripts]
serve = "python_template:main.main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.2.19",
    "pyrefly>=0.44.1",
    "uv>=0.9.18",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
