[project]
name = "project_name"
version = "0.1.0"
authors = [{name = "Vadym Stupakov", email = "vadim.stupakov@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "expression>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.26.0",
    "ruff>=0.5.6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
